2005-09-09  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/classMethod.c (processClass): 
	Added missing cast to fix compiler warning.

2005-09-09  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/zip/Deflater.c,
	libraries/clib/zip/Inflater.c:
	(GET_STREAM) Removed.
	(getStream, setStream) New inline functions.
	Replaced use of GET_STREAM by getStream or setStream.
	Added local variables to avoid casts and fix warnings.

	Reported by:  Andreas Tobler  <a.tobler@schweiz.ch>

2005-09-09  Dalibor Topic  <robilad@kaffe.org>

	* test/jni/jniBase.c (main): Turned env into a void*. Added 
	JNIEnv* jni_env. Set jni_env to env after VM is created. Use
	jni_env in the rest of function.
	* test/jni/jniExecClass.c (main): Likewise.
	* test/jni/jniReflect.c (main): Likewise.
	* test/jni/jniWeakTest.c (main): Likewise.

	Reported by:  Andreas Tobler  <a.tobler@schweiz.ch>

2005-09-08  Andreas Tobler  <a.tobler@schweiz.ch>

	* kaffe/kaffe/main.c 
	(options): Cast argument to free to avoid compiler warnings.

2005-09-08  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffe/main.c: Include stdlib.h for exit.
	Use EXIT_FAILURE and EXIT_SUCCESS everywhere.
	(global_env) Removed global variable.
	(checkException) Added JNIEnv* parameter, so that it no
	longer needs to use global_env.
	(main): New local variable env, declaredas void* to fix
	type-punning warning. Check if JNI_CreateJavaVM failed, 
	and exit with an error message.
	(main2): Pass JNIEnv pointer env on to checkException
	invocations. 
	(checkException): Replaced use of global_env by env.

2005-09-03  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* libraries/javalib/gnu/java/nio/charset/UTF_16Decoder.java:
	Changed the byte mask 0x00FF to 0xFF, conforming to GNU Classpath.

2005-09-03  Guilhem Lavaux  <guilhem@kaffe.org>

	* config/powerpc/jit3-powerpc.def: Debugging is now enabled by default
	and switched on using jit_debug.

See ChangeLog.17 for earlier messages.